Add data binding for viewholder election

--- a/starter/app/src/main/res/layout/viewholder_election.xml
+++ b/starter/app/src/main/res/layout/viewholder_election.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="clickListener"
+            type="com.example.android.politicalpreparedness.election.adapter.ElectionListener" />
+
+        <variable
+            name="election"
+            type="com.example.android.politicalpreparedness.network.models.Election" />
+    </data>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(election)}"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvElectionName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:text="@{election.name}"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="VIP Election" />
@@ -19,7 +33,9 @@
             android:id="@+id/tvElectionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@{election.electionDay.toLocaleString()}"
             android:textSize="14sp"
+
             tools:text="Datetime 01/01/1997" />
 
     </LinearLayout>
