--- a/starter/app/src/main/res/layout/fragment_election.xml
+++ b/starter/app/src/main/res/layout/fragment_election.xml
@@ -29,6 +29,7 @@
             android:id="@+id/rclUpcomingElections"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintHeight_percent="0.45"
             app:layout_constraintTop_toBottomOf="@id/tvUpComingHeader"
             tools:listitem="@layout/viewholder_election" />
@@ -47,6 +48,7 @@
             android:id="@+id/rclSavedElections"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintHeight_percent="0.45"
             app:layout_constraintTop_toBottomOf="@id/tvSavedHeader"
             tools:listitem="@layout/viewholder_election" />
