--- a/starter/app/src/main/res/layout/viewholder_election.xml
+++ b/starter/app/src/main/res/layout/viewholder_election.xml
@@ -9,13 +9,14 @@
 
         <variable
             name="election"
-            type="com.example.android.politicalpreparedness.network.models.Election" />
+            type="com.example.android.politicalpreparedness.domain.model.Election" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
         android:onClick="@{() -> clickListener.onClick(election)}"
         android:orientation="vertical">
 
