--- a/starter/app/src/main/res/layout/viewholder_representative.xml
+++ b/starter/app/src/main/res/layout/viewholder_representative.xml
@@ -12,7 +12,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="@dimen/small_padding">
 
         <ImageView
             android:id="@+id/representativePhoto"
