--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="default_padding">8dp</dimen>
     <dimen name="large_padding">16dp</dimen>
+    <dimen name="defaultMargin">8dp</dimen>
+    <dimen name="small_padding">4dp</dimen>
 
     <!-- TODO: Add necessary dimension values -->s
 
